# Vietnamese-Document-Classification

./: DatasetLoader.ipynb  NLP_Midterm.ipynb  Q2.ipynb  README.md  Training Pipeline.ipynb  main.py  pyproject.toml  schemas.py  utils.py
chrome-extension/: background.js  content.js  manifest.json  popup.html  popup.js
dataset/: link.txt
models/: doc2vec_nn_model.keras
